Fixes on mobile nav toggle

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -44,6 +44,11 @@ p {
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
 
+#ui-layer {
+    position: relative;
+    z-index: 9999; // absolute top
+}
+
 @media (max-width: 992px) {
     .page-title {
         margin-top: 4rem;
